@@ -10,14 +10,17 @@
 	<description>Project compiling neo4j driver natively and using it as a shared library</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven.compiler.debug>true</maven.compiler.debug>
+		<maven.compiler.parameters>true</maven.compiler.parameters>
+		<maven.compiler.release>${java.version}</maven.compiler.release>
+		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 
-		<neo4j-java-driver.version>4.1.1</neo4j-java-driver.version>
-		<graalvm.version>20.1.0</graalvm.version>
+		<native.maven.plugin.version>0.9.20</native.maven.plugin.version>
+		<neo4j-java-driver.version>5.6.0</neo4j-java-driver.version>
+		<graalvm.version>22.3.1</graalvm.version>
 	</properties>
 
 	<dependencies>
@@ -43,21 +46,37 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
-				<groupId>org.graalvm.nativeimage</groupId>
-				<artifactId>native-image-maven-plugin</artifactId>
-				<version>${graalvm.version}</version>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+				<version>${native.maven.plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<requiredVersion>22.3</requiredVersion>
+					<imageName>neo4j-migrations</imageName>
+					<buildArgs>
+						<arg>--no-fallback</arg>
+						<arg>--shared</arg>
+						<arg>-H:Name=libneo4j</arg>
+						<arg>-H:CLibraryPath=${project.basedir}/src/main/c</arg>
+						<arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.c=ALL-UNNAMED</arg>
+					</buildArgs>
+				</configuration>
 				<executions>
 					<execution>
+						<id>create-native-image</id>
 						<goals>
-							<goal>native-image</goal>
+							<goal>compile-no-fork</goal>
 						</goals>
 						<phase>package</phase>
 					</execution>
 				</executions>
-				<configuration>
-					<buildArgs>--no-fallback -H:+ReportExceptionStackTraces -H:EnableURLProtocols=http,https --enable-all-security-services -H:+JNI -H:CLibraryPath=${project.basedir}/src/main/c --shared -H:Name=libneo4j</buildArgs>
-				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</build>
